Make KeyVaultKeyStore can work without keyVaultUri.